ndb - bug#22838     when doing create unique index which mysql will silently converts to PK, ndb is not informed     so table will be useless.

change so that we never do online add index wo/ primary key.
    this is not good, but it's better than a useless table